--- a/_config.yml
+++ b/_config.yml
@@ -15,10 +15,10 @@ remote_theme           : "mmistakes/minimal-mistakes"
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "en-US"
-title                    : "Minimal Life"
+locale                   : "ko-KR"
+title                    : "Hapumee's Minimal Life"
 title_separator          : "-"
-subtitle                 : # site tagline that appears below site title in masthead
+subtitle                 : "Front-End & Project Management" # site tagline that appears below site title in masthead
 name                     : "Angela Min"
 description              : "Front-End Engineer"
 url                      : "https://hapumee.github.io"
@@ -288,3 +288,12 @@ defaults:
       comments: # true
       share: true
       related: true
+      show_date: true
+      date_format: "%Y-%m-%d"
+  # _pages
+    - scope:
+        path: "_pages"
+        type: pages
+      values:
+        layout: single
+        author_profile: true  
