--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
   - title: "Categories"
     url: /categories/
 
-#sidebar:
-#  - title: "TECH"
-#    url: /categories/tech/
-#  - title: "Project Management"
-#    url: /categories/pm/
+sidebar:
+  - title: "Tech"
+    url: /categories/#tech
+  - title: "Project Management"
+    url: /categories/#project-management
